<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_menu_notes"
            android:title="@string/nav_notes"/>
        <item
            android:id="@+id/nav_post"
            android:icon="@drawable/ic_menu_blog"
            android:title="@string/nav_post"/>
        <item
            android:id="@+id/nav_notebooks"
            android:icon="@drawable/ic_menu_notebook"
            android:title="@string/nav_notebooks"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/nav_settings"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_share"/>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send"/>
        </menu>
    </item>

</menu>
